# ssp4sim

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  requirements.txt  vcpkg-configuration.json  vcpkg.json  vcpkg.md
docs/: logging_guidlines.md  profiling.md  todo.md
lib/: CMakeLists.txt  class_description.md  class_diagram.md
lib/include/: pch.h  readme.md  sim.hpp  simulation.cpp  simulation.hpp  simulator.hpp  ssp4sim_definitions.hpp
lib/include/execution/: custom_executors.hpp  execution.hpp  executor.cpp  executor.hpp  executor_builder.cpp  executor_builder.hpp  executor_utils.hpp  invocable.cpp  invocable.hpp  jacobi.cpp  jacobi.hpp  seidel.cpp  seidel.hpp
lib/include/execution/jacobi/: jacobi_base.cpp  jacobi_base.hpp  jacobi_parallel_fut.cpp  jacobi_parallel_fut.hpp  jacobi_parallel_spin.cpp  jacobi_parallel_spin.hpp  jacobi_parallel_tbb.cpp  jacobi_parallel_tbb.hpp  jacobi_serial.cpp  jacobi_serial.hpp
lib/include/execution/seidel/: seidel_base.cpp  seidel_base.hpp  seidel_parallel.cpp  seidel_parallel.hpp  seidel_serial.cpp  seidel_serial.hpp  seidel_utils.hpp
lib/include/graph/: graph.cpp  graph.hpp  graph.md  graph_builder.cpp  graph_builder.hpp
lib/include/graph/analysis/: analysis_connection.cpp  analysis_connection.hpp  analysis_connector.cpp  analysis_connector.hpp  analysis_graph.cpp  analysis_graph.hpp  analysis_graph_builder.cpp  analysis_graph_builder.hpp  analysis_internal.cpp  analysis_internal.hpp  analysis_model.cpp  analysis_model.hpp
lib/include/handler/: fmi4c_adapter.cpp  fmi4c_adapter.hpp  fmu_handler.cpp  fmu_handler.hpp
lib/include/model/: model_connection.cpp  model_connection.hpp  model_connector.cpp  model_connector.hpp  model_fmu.cpp  model_fmu.hpp
lib/include/schema_extensions/: FMI2_Enums_Ext.cpp  FMI2_Enums_Ext.hpp  FMI2_modelDescription_Ext.cpp  FMI2_modelDescription_Ext.hpp  SSP1_SystemStructureDescription_Ext.cpp  SSP1_SystemStructureDescription_Ext.hpp  SSP1_SystemStructureParameter_Ext.cpp  SSP1_SystemStructureParameter_Ext.hpp  SSP_Ext.cpp  SSP_Ext.hpp  extensions.md  initial_value.cpp  initial_value.hpp
lib/include/signal/: readme.md  record_tracker.hpp  recorder.cpp  recorder.hpp  ring_storage.cpp  ring_storage.hpp  storage.cpp  storage.hpp
lib/include/utils/: config.cpp  config.hpp  data_recorder.cpp  data_recorder.hpp  data_ring_storage.cpp  data_ring_storage.hpp  data_storage.cpp  data_storage.hpp  data_type.hpp  io.cpp  io.hpp  json.cpp  json.hpp  map.hpp  model.cpp  model.hpp  node.cpp  node.hpp  ring_buffer.cpp  ring_buffer.hpp  tarjan.cpp  tarjan.hpp  task_thread_pool.cpp  task_thread_pool.hpp  task_thread_pool2.cpp  task_thread_pool2.hpp  time.cpp  time.hpp  timer.hpp  vector.hpp
lib/public_include/: simulator.cpp  simulator.hpp
lib/src/: simulation.cpp  simulator.cpp
lib/src/execution/: executor.cpp  executor_builder.cpp  invocable.cpp
lib/src/graph/: graph.cpp  graph_builder.cpp
lib/src/graph/analysis/: analysis_connector.cpp  analysis_graph.cpp  analysis_graph.md  analysis_graph_builder.cpp  analysis_internal.cpp  analysis_model.cpp
lib/src/handler/: fmi4c_adapter.cpp
lib/src/model/: model_connector.cpp  model_fmu.cpp
lib/src/schema_extensions/: FMI2_modelDescription_Ext.cpp  SSP1_SystemStructureDescription_Ext.cpp  SSP1_SystemStructureParameter_Ext.cpp  SSP_Ext.cpp
lib/src/utils/: config.cpp  data_type.cpp  node.cpp  task_thread_pool.cpp  time.cpp  timer.cpp
public/python_api/: CMakeLists.txt  __init__.py  pyproject.toml  ssp4cpp_python_api.cpp  ssp4sim_python_api.cpp
public/ssp4sim_app/: CMakeLists.txt  main.cpp
resources/: generic_config.json  modelDescription.xml  modelDescription_sw.xml  sine_wave_config.json
resources/algebraic_loop/: algebraic_loop_1.ssp  algebraic_loop_2.ssp  algebraic_loop_3.ssp  algebraic_loop_4.ssp
resources/delay_sys/: 1_jacobi_0.01ms.json  1_jacobi_1ms.json  1_jacobi_2ms.json  1_jacobi_3ms.json  1_native_0.01ms.json  1_native_1ms.json  1_native_2ms.json  1_native_3ms.json  1_seidel_0.01ms.json  1_seidel_1ms.json  1_seidel_2ms.json  1_seidel_3ms.json  2_grouping_7ms.json  2_grouping_8ms.json  3_explicit_delay_1ms.json  3_explicit_delay_2ms.json  3_grouping.json  3_grouping_partial.json  delay.json  delay_con.json  delay_sys.ssp  delay_sys_config.json  embrace.json  execute.sh  explicit_delay_1ms.json  explicit_delay_2ms.json  explicit_delay_con.json  explicit_delay_mod.json  explicit_delay_mod_con.json  explicit_delay_mod_con_long.json  explicit_no_delay.json  generate_configs.py  implicit_delay_1ms.json  implicit_delay_2ms.json  implicit_delay_con.json  implicit_delay_mod.json  implicit_delay_mod_con.json  implicit_no_delay.json  native.json  no_delay.json
resources/delay_sys/__old__/: implicit_delay_2ms.json  native_no_delay_1ms.json  native_no_delay_2ms.json
resources/delay_sys/reference/: compare.py  reference_system_native.csv
resources/delay_sys/ssp_delay_fmi2/: SystemStructure.ssd  SystemStructure_no_delay.ssd  explicit_delay_con.ssd  explicit_delay_mod.ssd  explicit_delay_mod_con.ssd  implicit_delay_con.ssd  implicit_delay_mod.ssd  implicit_delay_mod_con.ssd  native.ssd  (+6 more)
resources/embrace/: embrace.json  embrace_profiling.json  merge_scenario.py
resources/f16/: config.json
resources/scenario/: create_ssp.py  scenario.fmu  scenario.json  scenario.ssp  scenario_parameter.ssp
resources/wingman_drone/: wingman.json
scripts/: compare_with_ref.py  filter_results.py  plot.py
tests/: CMakeLists.txt
tests/python_api/: sim.py
tests/references/: algebraic_loop_4_ssd.txt  embrace_scenario_result.csv  embrace_ssd.txt  embrace_ssm.txt  embrace_ssv.txt  fmu_dynamic_connection_fmu_fmu2.txt  fmu_sources_fmu_fmu.txt  malformed_test_config.json  test_config.json
tests/resources/: embrace_test_parallel.json
tests/sim/: test_embrace_scenario.cpp  test_fmi4c_adapter.cpp
tests/utils/: parallel.cpp  test_config.cpp  test_data_recorder.cpp  test_data_storage.cpp  test_node.cpp  test_node_iterator.cpp  test_ring_buffer.cpp  test_ring_storage.cpp  test_signal_storage.cpp  test_thread_pool.cpp
(+15 files in other folders)
